--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
 }
 
 .stats{
-    width: 15vw;
+    width: 200px;
     height: 95vh;
     display: block;
     border: 5px solid black;
     border-radius: 10px;
     justify-items: left;
     padding: 2px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 .stats div{
     margin-bottom: 10px;
@@ -35,28 +35,82 @@ body {
     height: 1em;
     width: 1em;
 }
-.top{
-    width: 78vw;
+.homestead{
+    width: 294px;
+    height: 95vh;
+    display: block;
+    border: 5px solid black;
+    border-radius: 10px;
+    justify-items: left;
+    padding: 2px;
+    margin-right: 10px;
+    overflow-x: visible;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: black powderblue;
+}
+.right{
     height: 95vh;
     display: flex;
+    flex-grow: 1;
     border: 5px solid black;
     border-radius: 10px;
     justify-items: center;
     padding: 2px;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: black powderblue;
+    background-image: url("./assets/CityBackground.png")
 }
 
-.buildings{
-    width: 300px;
-    display: grid;
+.TreeGrow{
+    align-items: center;
+    justify-items: center;
+}
+
+.laborBin{
+    width: 256px;
+    display: flex;
     border: 3px solid black;
-    background-color: blanchedalmond;
     border-radius: 10px;
     justify-items: center;
-    margin: 0px 10px 0px 10px;
+    margin: 5px 0px 5px 0px;
     padding: 4px;
     text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
+.crank {
+    height: 48px;
+    width: 48px;
+    transform: rotate(0deg);
+    margin-left: 10px;
+}
+.crankRot {
+    transform: rotate(360deg);
+    transition: .25s linear;
+}
+.crankIndicator {
+    display: grid;
+    height: 36px;
+    width: 6px;
+    border: 2px solid black;
+    padding: 0px;
+    margin-left: 4px;
+}
+.indicatorLight {
+    height: 4px;
+    width: 4px;
+    border: 1px solid black;
+    padding: 0px;
+    margin: 0px;
+    background-color: lightgrey;
+}
+.indicatorLight.active {
+    background-color: red;
+}
+
 
 .TreeIcon{
     width: 256px;
@@ -91,6 +145,7 @@ body {
     justify-items: center;
     padding: 2px;
 }
+
 .treeUpgrades{
     display: flex;
     align-items: center;
@@ -99,6 +154,23 @@ body {
     padding: 10px;
 }
 .treeUpgrades h5{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.batUpgradeBin{
+    display: block;
+    justify-items: center;
+    padding: 2px;
+}
+.batteryUpgrades{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px;
+    padding: 10px;
+}
+.batteryUpgrades h5{
     margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -121,6 +193,7 @@ body {
     position: relative;
     text-align: center;
 }
+
 .leaf:hover{
     opacity: .8;
     cursor: pointer;
@@ -130,33 +203,53 @@ body {
     scale: .9
 }
 
-.crank {
-    height: 48px;
-    width: 48px;
-    transform: rotate(0deg);
+.gardens{
+    display: flex;
 }
-.crankRot {
-    transform: rotate(360deg);
-    transition: .25s linear;
-}
-.crankIndicator {
+.leafGarden{
     display: grid;
-    height: 36px;
-    width: 6px;
-    border: 2px solid black;
-    padding: 0px;
-    margin-left: 4px;
+    grid-auto-rows: min-content;
+    padding: 70px 40px 0px 40px;
+    text-align: center;
 }
-.indicatorLight {
-    height: 4px;
-    width: 4px;
-    border: 1px solid black;
-    padding: 0px;
+
+.willowLeaf{
+    width: .5em;
+    height: auto;
+    transform: scale(.3);
+    margin-top: -3em;
+}
+.willowLeafExpand{
+    transform: scale(1);
+    transition: 1s linear;
+
+    -webkit-animation: willowLeafExpand 3s Linear 1 ;
+    -moz-animation: willowLeafExpand 3s Linear 1 ;
+    animation: willowLeafExpand 3s Linear 1 ;
+}
+@keyframes willowLeafExpand {
+    0% { scale: .3;}
+  100% { scale: 1; }
+}
+
+
+.buildings{
+    width: 300px;
+    display: grid;
+    grid-auto-rows: min-content;
+    border: 3px solid black;
+    background-color: blanchedalmond;
+    border-radius: 10px;
+    justify-items: center;
+    margin: 0px 10px 0px 10px;
+    padding: 4px;
+    text-align: center;    
+}
+.buildings h3{
+    margin: 10px 0px 0px 0px;
+}
+.buildings p{
     margin: 0px;
-    background-color: lightgrey;
-}
-.indicatorLight.active {
-    background-color: red;
 }
 
 .batteryBin{
@@ -165,7 +258,7 @@ body {
     border: 3px solid black;
     border-radius: 10px;
     justify-items: center;
-    margin: 20px 0px 20px 0px;
+    margin: 5px 0px 5px 0px;
     padding: 4px;
     text-align: center;
     align-items: center;
@@ -174,12 +267,12 @@ body {
 .batteryBin h3{
     margin:0px 0px 0px 0px;
 }
-.batCapUpgrades {
+/*.batCapUpgrades {
     display: grid;
     align-items: center;
     justify-content: space-between;
     margin: 0px;
-}
+}*/
 .batCap {
     border: 3px solid black;
     border-radius: 10px;
@@ -209,8 +302,8 @@ body {
     border: 2px solid black;
 }
 .batIcons{
-    height: 96px;
-    width: auto;
+    height: 24px;
+    width: 45px;
     margin-right: 5px;
 }
 
@@ -220,18 +313,22 @@ body {
     border: 3px solid black;
     border-radius: 10px;
     justify-items: center;
-    margin: 10px 0px 10px 0px;
+    margin: 5px 0px 5px 0px;
     padding: 4px;
     text-align: center;
     align-items: center;
 }
-
+.mintIcons{
+    width: 272px;
+    height: auto;
+}
 .mintAction{
-    width: 280px;
+    width: 140px;
     display: flex;
     align-items: center;
     justify-items: stretch;
     justify-content: space-between;
+    
 }
 .mintCoins{
     width: 108px;
@@ -251,10 +348,8 @@ body {
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
-  margin-left: 5px;
-  margin-right: 5px;
+  width: 48px;
+  height: 16px;
 }
 /* Hide default HTML checkbox */
 .switch input {
@@ -272,7 +367,8 @@ body {
     bottom: 0;
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 34px;
+    border: 1px solid grey;
+    border-radius: 16px;
 }
 .slider.Beta {
     background-color: #f6ccaa;
@@ -286,14 +382,14 @@ body {
 .slider:before {
     position: absolute;
     content: "";
-    height: 26px;
-    width: 26px;
+    height: 8px;
+    width: 8px;
     left: 4px;
-    bottom: 4px;
+    bottom: 3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
-    border-radius: 50px;
+    border-radius: 25px;
 }
 input:checked + .slider.Beta {
     background-color: #f7770a;
@@ -308,9 +404,9 @@ input:focus + .slider {
     box-shadow: 0 0 1px #000000;
 }
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    transform: translateX(30px);
 }
 
 .ConvArrow {
@@ -364,6 +460,7 @@ input:checked + .slider:before {
 .ContainerSmFlex{
     display: flex;
     align-items: center;
+    border: 1px solid black
 }
 .containerSmGrid{
     display: grid;
@@ -398,4 +495,31 @@ input:checked + .slider:before {
 .testbutton:active {
     opacity: 1;
     scale: .9
+}
+
+
+.theGrid{
+    display: grid;
+    grid-template-columns: repeat(2, 140px);
+    grid-auto-rows: 35px;
+}
+.theGrid div{
+
+    &:nth-child(4n+1){
+        margin-left: 50%;
+        margin-right: -50%;
+    }
+    &:nth-child(4n+2){
+        margin-left: 50%;
+        margin-right: -50%;
+    }
+    &:nth-child(4n+3){
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+    &:nth-child(4n+4){
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+    
 }
