--- a/style.css
+++ b/style.css
@@ -161,6 +161,16 @@ body {
 .TreeButtonContainer{
     position: relative;
 }
+.TreeButton2{
+    width: 256px;
+    height: auto;
+    border: 3px solid black;
+    border-radius: 10px;
+    justify-items: center;
+    margin: 0px 5px 0px 5px;
+    padding: 4px;
+    text-align: center;
+}
 .TreeButton{
     width: 256px;
     height: auto;
@@ -267,6 +277,13 @@ body {
     padding: 70px 40px 0px 40px;
     text-align: center;
 }
+.willowLeaf2{
+    position:absolute;
+    width: auto;
+    height: auto;
+    transform: scale(.3);
+    margin-top: -3em;
+}
 .willowLeaf{
     width: .5em;
     height: auto;
@@ -298,7 +315,7 @@ body {
     margin: 0px 10px 0px 10px;
     padding: 4px;
     text-align: center;
-    overflow-x: hidden;
+    overflow-x: visible;
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: black blanchedalmond;
