--- a/static/style.css
+++ b/static/style.css
@@ -91,6 +91,12 @@ body {
     border-radius: 10px;
     padding: 5px;
 }
+
+.loader{
+    height: 1.5em;
+    width: 1.5em;
+}
+
 .statBatCap{
     margin: 6px 0px 16px 0px;
     font-size:.8em;
@@ -307,6 +313,7 @@ body {
     justify-content: space-between;
 }
 .uploadBin h5 {
+    display: flex;
     margin-bottom: 0px;
     padding: 4px;
     border: 5px outset grey;
